# papasmurf

./: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python.yml  rust.yml
papasmurf/: Cargo.toml
papasmurf-py/: Cargo.toml  README.md
papasmurf-py/papasmurf/: __init__.py  error.rs  lib.rs  pyfile.rs
papasmurf-py/papasmurf/tests/: __init__.py  test_doctest.py  test_lib.py  unittest.rs
papasmurf/src/: errors.rs  io.rs  lib.rs  main.rs  mapper.rs  primer.rs  seq.rs
papasmurf/src/db/: builder.rs  kmers.rs  kmertrie.rs  mapper.rs  mod.rs
papasmurf/src/matrix/: coo.rs  csc.rs  csr.rs  dense.rs  dok.rs  mod.rs
papasmurf/src/utils/: interner.rs  mod.rs  ordered_set.rs  paired.rs
src/: db.rs  io.rs  lib.rs  main.rs  mapper.rs  matrix.rs  primer.rs  seq.rs  utils.rs
src/backup/: alphabet.rs  seq.rs
src/db/: builder.rs  kmers.rs  kmertrie.rs  mod.rs
src/matrix/: coo.rs  csc.rs  csr.rs  dense.rs  dok.rs  mod.rs
src/utils/: interner.rs  ordered_set.rs  paired.rs
