[package]
name = "pssmurf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = { version = "1.3.1", optional = true }
flate2 = {version = "1.0", optional = true }
fastq = { version = "0.6.0", optional = true }
indicatif = { version = "*", optional = true }
lightmotif = "0.4.0"

[features]
default = []
cli = ["bio", "flate2", "fastq", "indicatif"]

[[bin]]
name = "pssmurf"
path = "src/main.rs"
required-features = ["cli"]