[package]
name = "papasmurf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typenum = "1.16"
flate2 = {version = "1.0", optional = true }
indicatif = { version = "*", optional = true }
lightmotif = "0.4.0"

[dependencies.serde]
features = ["derive", "rc"]
version = "1.0"
optional = true

[features]
default = ["serde"]
cli = ["flate2", "indicatif"]

[[bin]]
name = "pssmurf"
path = "src/main.rs"
required-features = ["cli"]
