[build-system]
requires = ["maturin ~=1.2"]
build-backend = "maturin"

[project]
name = "papasmurf"
dynamic = ["version"]
description = "PyO3 bindings and Python interface to PAPASMURF, a Platform-Accelerated Package for Alignment-free SMURF analysis"
readme = 'papasmurf-py/README.md'
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
license-file = "COPYING"
authors = [
  { name = "Martin Larralde", email = "martin.larralde@embl.de" },
]
keywords = ["bioinformatics", "metagenomics", "16S", "taxonomy", "profiling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

[project.urls]
"Homepage" = "https://github.com/althonos/papasmurf/"
"Bug Tracker" = "https://github.com/althonos/papasmurf/issues"
"Changelog" = "https://github.com/althonos/papasmurf/blob/master/CHANGELOG.md"
"Coverage" = "https://codecov.io/gh/althonos/papasmurf/"
# "Documentation" = "https://papasmurf.readthedocs.io/"
"Builds" = "https://github.com/althonos/papasmurf/actions/"
"PyPI" = "https://pypi.org/project/papasmurf"

[tool.maturin]
manifest-path = "papasmurf-py/Cargo.toml"
features = ["extension-module"]
python-source = "papasmurf-py"
module-name = "papasmurf.lib"

[tool.cibuildwheel]
skip = ["*-musllinux_i686"]
before-build = "pip install maturin"
test-command = "python -m unittest papasmurf.tests -v"
build-verbosity = 1

[tool.cibuildwheel.linux]
environment = { PATH="$HOME/.cargo/bin:$PATH" }
before-all = "curl -sSf https://sh.rustup.rs | sh -s -- -y"

[tool.cibuildwheel.macos]
before-all = ["curl -sSf https://sh.rustup.rs | sh -s -- -y"]
environment = { MACOSX_DEPLOYMENT_TARGET = "10.12" }

[[tool.cibuildwheel.overrides]]
select = "*-macosx_x86_64"
inherit.before-all = "append"
before-all = ["rustup target add x86_64-apple-darwin"]

[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64"
inherit.before-all = "append"
before-all = ["rustup target add aarch64-apple-darwin"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if typing.TYPE_CHECKING:",
    "@abc.abstractmethod",
    "@abc.abstractproperty",
    "raise NotImplementedError",
    "return NotImplemented",
    "raise UnexpectedError",
    "raise AllocationError",
]

[tool.mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true

["tool.mypy-lightmotif.tests.*"]
ignore_errors = true
