[package]
name = "papasmurf-py"
version = "0.1.0"
edition = "2021"
build = "papasmurf/build.rs"

[lib]
crate-type = ["cdylib", "rlib"]
path = "papasmurf/lib.rs"

[build-dependencies.built]
version = "0.7"
features = ["chrono", "cargo-lock"]

[dependencies.papasmurf]
version = "0.1.0"
path = "../papasmurf"
[dependencies.pyo3]
version = "0.27.1"
features = ["macros"]
[dependencies]
pyo3-built = "0.6.0"
serde_json = "1.0"
rmp-serde = "1.1.2"

[features]
default = []
built = []
extension-module = ["pyo3/extension-module"]
nightly = ["pyo3/nightly"]

[[test]]
name = "unittest"
path = "papasmurf/tests/unittest.rs"
harness = false
