[package]
name = "papasmurf-py"
version = "0.1.0"
edition = "2021"
authors = ["Martin Larralde <martin.larralde@embl.de>"]
license = "GPL-3.0-or-later"
description = "PyO3 bindings and Python interface to PAPASMURF, a Platform-Accelerated Package for Alignment-free SMURF analysis."
repository = "https://github.com/althonos/papasmurf"
homepage = "https://github.com/althonos/papasmurf/tree/main/papasmurf-py"
readme = "README.md"
categories = ["science::bioinformatics"]
keywords = ["bioinformatics", "metagenomics", "16S", "taxonomy"]
build = "papasmurf/build.rs"

[lib]
crate-type = ["cdylib", "rlib"]
path = "papasmurf/lib.rs"

[build-dependencies.built]
version = "0.8"
features = ["chrono", "cargo-lock"]

[dependencies.papasmurf]
version = "0.1.0"
path = "../papasmurf"
[dependencies.pyo3]
version = "0.28.1"
features = ["macros"]
[dependencies]
pyo3-built = "0.6.0"
serde_json = "1.0"
rmp-serde = "1.1.2"

[features]
default = []
built = []
extension-module = ["pyo3/extension-module"]
nightly = ["pyo3/nightly"]
abi3 = ["pyo3/abi3-py38"]

[[test]]
name = "unittest"
path = "papasmurf/tests/unittest.rs"
harness = false
