[package]
name = "papasmurf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typenum = "1.16"
flate2 = {version = "1.0", optional = true }
lightmotif = "0.5.0"

[dependencies.serde]
features = ["derive", "rc"]
version = "1.0"
optional = true


[dependencies.rmp-serde]
version = "1.0"
optional = true
[dependencies.serde_json]
version = "1.0"
optional = true
[dependencies.rayon]
version = "1.7"
optional = true
[dependencies.indicatif]
version = "0.17"
features = ["rayon"]
optional = true


[features]
default = ["serde"]
cli = ["flate2", "indicatif", "rmp-serde", "serde_json", "rayon"]

[[bin]]
name = "pssmurf"
path = "src/main.rs"
required-features = ["cli"]
