[package]
name = "papasmurf"
version = "0.1.1"
edition = "2021"
authors = ["Martin Larralde <martin.larralde@embl.de>"]
license = "GPL-3.0-or-later"
description = "Platform-Accelerated Package for Alignment-free SMURF analysis."
repository = "https://github.com/althonos/papasmurf"
homepage = "https://github.com/althonos/papasmurf"
readme = "README.md"
categories = ["science::bioinformatics"]
keywords = ["bioinformatics", "metagenomics", "16S", "taxonomy"]

[dependencies]
typenum = "1.16"
lightmotif = "0.10.0"

[dependencies.serde]
features = ["derive", "rc"]
version = "1.0"
optional = true

[dependencies.flate2]
version = "1.0"
optional = true
[dependencies.rmp-serde]
version = "1.0"
optional = true
[dependencies.serde_json]
version = "1.0"
optional = true
[dependencies.rayon]
version = "1.7"
optional = true
[dependencies.indicatif]
version = "0.18"
features = ["rayon"]
optional = true


[features]
default = ["serde"]
cli = ["flate2", "indicatif", "rmp-serde", "serde_json", "rayon"]

[[bin]]
name = "pssmurf"
path = "src/main.rs"
required-features = ["cli"]
